// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Roadwayai's identifyUser destination action: all fields 1`] = `
Array [
  Object {
    "anonymous_id": "$9fqC*!uvF",
    "enable_batching": true,
    "ip": "$9fqC*!uvF",
    "timestamp": "$9fqC*!uvF",
    "traits": Object {
      "testType": "$9fqC*!uvF",
    },
    "user_id": "$9fqC*!uvF",
  },
]
`;

exports[`Testing snapshot for Roadwayai's identifyUser destination action: required fields 1`] = `
Array [
  Object {
    "anonymous_id": "$9fqC*!uvF",
    "user_id": "$9fqC*!uvF",
  },
]
`;
